crates/bamltype/tests/ui/tuple_struct.stderr
error: Tuple structs are not supported for BAML outputs; hint: use a named-field struct
 --> tests/ui/tuple_struct.rs:4:1
  |
4 | struct Bad(u32);
  | ^^^^^^^^^^^^^^^^
