crates/bamltype/tests/ui/tuple_struct.rs
use bamltype::BamlType;

#[BamlType]
struct Bad(u32);

fn main() {}
